# esphome_python_bluetooth_proxy

./: .flake8  .pre-commit-config.yaml  CONTRIBUTING.md  ESPHOME_PROTOCOL_ANALYSIS.md  IMPLEMENTATION_ANALYSIS.md  IMPLEMENTATION_ROADMAP.md  LICENSE  PROJECT_PLAN.md  README.md  TECHNICAL_SPECIFICATIONS.md  bt_dev_version.py  esphome-bluetooth-proxy.service  esphome_bluetooth_proxy_daemon.py  fix_linting.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_aioesphomeapi_flow.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_project_structure.py
.github/workflows/: ci.yml
src/esphome_bluetooth_proxy/: __init__.py  advertisement_batcher.py  api_server.py  ble_connection.py  ble_scanner.py  bluetooth_proxy.py  connection.py  device_info.py  gatt_operations.py  pairing_manager.py  protocol.py
tests/: test_basic.py
